# symvonia

./: .gitignore  README.md  generate-latest-json.ps1  next.config.ts  package-lock.json  package.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: ConfirmDialog.tsx  FolderExplorer.tsx  MetadataPanel.tsx  PlaybackControls.tsx  PlayerPanel.tsx  SeekBar.tsx  SettingsModal.tsx  StreamingModal.tsx  VolumeControl.tsx
app/lib/: colors.ts
docs/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
