[package]
name = "symvonia"
version = "0.4.0"
description = "Symvonia - Desktop Music Player"
authors = ["Eszuri"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "symvonia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
lofty = "0.22"
base64 = "0.22"
image = "0.25"
rfd = "0.15"
tauri-plugin-updater = "2"
